--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
       content: '• ';
       color: #4fc3f7;
     }
+
+    h1 {
+      color: #4fc3f7;
+    }
+
+    h2 {
+      color: #ffcc00;
+    }
   </style>
 </head>
 <body>
@@ -51,12 +59,14 @@
   </ul>
 
   <script>
+    // Génére le lien vers track.html
     function genererLien() {
       const baseUrl = window.location.href.replace("index.html", "");
       const trackLink = baseUrl + "track.html";
       document.getElementById("lien").innerHTML = `<a href="${trackLink}" target="_blank">${trackLink}</a>`;
     }
 
+    // Charge les infos stockées par track.html
     window.onload = () => {
       const geo = localStorage.getItem("geo");
       const browser = localStorage.getItem("browser");
