--- a/track.html
+++ b/track.html
@@ -15,11 +15,15 @@
     h1 {
       color: #4fc3f7;
     }
+
+    p {
+      color: #ffcc00;
+    }
   </style>
 </head>
 <body>
   <h1>Collecte des données...</h1>
-  <p>Merci de patienter, vous allez être redirigé.</p>
+  <p>Merci de patienter, vous allez être redirigé dans 5 secondes.</p>
 
   <script>
     // GÉOLOCALISATION
